Updates customer issues prioritization framework from pilot to GA

--- a/sites/handbook/source/handbook/product/product-processes/customer-issues-prioritization-framework/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-processes/customer-issues-prioritization-framework/index.html.md.erb
@@ -9,29 +9,17 @@ title: "Customer Issues Prioritization Framework"
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-**The Customer Prioritization Framework is currently an MVC and in its initial pilot phase.** Work in progress can be seen on the [WG:Prioritization Framework issue board](https://gitlab.com/groups/gitlab-com/-/boards/2086332?label_name[]=wg%3Aprioritization%20framework). For any questions or to collaborate, feel reach out to DRI `@gweaver` or join the [ongiong bi-weekly sync](https://docs.google.com/document/d/1oBWNxBSOJKrh3ubHwN5pI8243vBjJ-Y_Cax17A5abII/)**
+## Context 
 
-## Pilot Context 
+The Customer Prioritization Framework was developed by the [Issue Prioritization Framework Working Group](https://about.gitlab.com/company/team/structure/working-groups/issue-prioritization-framework/) as a way to improve the efficiency of the feedback loops among Sales, Customer Success, and Product. It provides a comprehensive system to categorize and measure customer, and prospective customer, demand for capabilities within GitLab. This page covers how the first iteration of the model works and how to interact with and interpret, the [not public, internal-only](https://about.gitlab.com/handbook/communication/confidentiality-levels/#not-public) dashboards that it powers.
 
-The Customer Prioritization Framework was developed by the [Issue Prioritization Framework Working Group](https://about.gitlab.com/company/team/structure/working-groups/issue-prioritization-framework/) as a way to improve the efficiency of the feedback loops among Sales, Customer Success, and Product. It provides a comprehensive system to categorize and measure customer, and prospective customer, demand for capabilities within GitLab. This page covers how the first iteration of the model works and how to interact with and interpret, the [not public, internal-only](https://about.gitlab.com/handbook/communication/confidentiality-levels/#not-public) dashboards that it powers. 
-
-## Pilot Outcomes
-
-More details on our goals, outcomes and how we're tracking and measuring success can be found [on the Working Group page](https://about.gitlab.com/company/team/structure/working-groups/issue-prioritization-framework/). 
+The outcomes the framework is aimed at providing:
 
 1. **Collaboration & Transparency:** Provide quantitative data at scale that enables various GitLab departments and teams to evaluate and discuss customer and prospect needs in an "apples to apples" manner. 
-1. **Efficiency:** -- Increase the efficiency of GitLab team members by leveraging a single model to replace many manual, tedious, and time-consuming processes such as maintaining the Top ARR Spreadsheet, Technical Account Managers tracking customer requests in issue descriptions within collaboration projects or external spreadsheets, and product managers scouring dozens issues and many external sources to gather information about customer priorities.
+1. **Efficiency:** Increase the efficiency of GitLab team members by leveraging a single model to replace many manual, tedious, and time-consuming processes such as maintaining the Top ARR Spreadsheet, Technical Account Managers tracking customer requests in issue descriptions within collaboration projects or external spreadsheets, and product managers scouring dozens issues and many external sources to gather information about customer priorities.
 1. **Results:** Establish a fair "influence economy" across all customers and prospects to help keep the focus on delivering results that are inclusive of all customers. Provide GitLab leadership with simple mechanisms to change the global prioritization of customer issues across R&D depending on the desired growth and retention outcomes. 
 
-## Pilot status
-
-We are currently conducting a pilot with the initial model and MVC dashboard. 
-
-As of FY22 Q4, TAMs have been dogfooding the [Customer Requested Issues (TAM) dashboard](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/970772/User-Request-Issue-Prioritization---TAM-Customer-View) as one of their [sensing mechanisms](https://about.gitlab.com/handbook/product/product-processes/#sensing-mechanisms) as part of [X existing process](LINK to where the full TAM process is documented, where the use of this dash is included).
-
-As of FY23 Q1, we are ready to conduct a pilot with the initial model and MVC dashboards with product managers as well. Product managers can now use the [Customer Requested Issues v2 (Product) dashboard](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/970771/User-Request-Issue-Prioritization---Product) as a sensing mechanism.  
-
-Throughout FY23 Q1/Q2, as product managers are dogfooding, we ask the issues below be used to provide feedback, ask questions, or make requests for additional meta-data or dimensions:
+## Where to provide feedback
 
 - [Product Feedback](https://gitlab.com/gitlab-com/Product/-/issues/3546)
 - [Customer Success Feedback](https://gitlab.com/gitlab-com/Product/-/issues/3545)
@@ -71,7 +59,6 @@ Throughout FY23 Q1/Q2, as product managers are dogfooding, we ask the issues bel
 
 1. To view a list of requested issues by customer, stage, TAM, or category, visit the [Customer Requested Issues (Product) dashboard](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/970771/User-Request-Issue-Prioritization---Product) or [Customer Requested Issues (TAM) dashboard](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/970772/User-Request-Issue-Prioritization---TAM-Customer-View) and apply the relevant filters.
 1. To add a customer or opportunity to an open issue or epic, follow the process outlined below in ["Customer Links"](https://about.gitlab.com/handbook/product/product-processes/customer-issues-prioritization-framework/#customer-links).
-1. If you are a Product Manager participating in the pilot, please take some time to [add theme labels to your issues and epics](/handbook/product/product-processes/aligning-work-items-to-themes). 
 1. Optionally, watch the [walk-through (10m 20s)](https://www.youtube.com/watch?v=ZUxIxp_Pv5k&list=PL05JrBw4t0KrKoeXjf5Bdtapu9Cl3T7gI&index=17&pp=sAQB).
 
 
@@ -285,8 +272,7 @@ Filters:
 
 ## Roadmap 
 
-1. Incorporate feedback from the pilot. 
-1. [Map issues and epics to investment themes](https://gitlab.com/gitlab-com/Product/-/issues/3907) and view requests aggregated and grouped by themes within the various dashboards. 
+1. [v1.1 Improvements](https://gitlab.com/gitlab-com/Product/-/issues/4170) 
 1. [Provide snapshots of the data](https://gitlab.com/gitlab-com/Product/-/issues/3361) to better understand historical trends. 
 1. [Explore how incorporate non-customer issues and epics](https://gitlab.com/gitlab-com/Product/-/issues/1639) such as longer horizon market opportunities and other types of work items (bugs, infradev, security, and so on) that product managers routinely need to schedule.
 1. Determine the best method for [pushing prioritization data back into GitLab](https://gitlab.com/gitlab-com/Product/-/issues/1637).
