Add list and Sisense chart showing top dashboards created by PDI team

--- a/sites/handbook/source/handbook/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
@@ -12,7 +12,14 @@ title: PDI Dashboards, Analysis, & Insights
 This is a WIP page to aggregate dashboards, analysis, and insights generated or owned by the 
 Product Data Insights team.
 
+
+
+
 ### Dashboards
+
+Please see the chart below ([or follow this link](https://app.periscopedata.com/app/gitlab/1013112/Sisense-Usage-Insights?widget=15499554&udv=1634665)) to see a list of the most-used dashboards that are owned by members of the Product Data Insights team.Note that viewing dashboards in the `gitlab:safe-dashboard` space may require additional steps to [obtain SAFE Dashboard access](https://about.gitlab.com/handbook/business-technology/data-team/platform/safe-data/). If you have any questions about using and interpreting the insights from these dashboards, please reach out to the dashboard owner or tag `@product-analysts` in the `#data` channel on Slack.
+
+<embed width="100%" height="350" src="<%= signed_periscope_url(dashboard: 1013112, chart: 15499554, embed: 'v2') %>">
 
 | Dashboard | Description | Date | SAFE Access Required? |
 | ------ | ------ |------ |------ |
