Update teams for Integrations and Foundations

--- a/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/_monitoring.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/_monitoring.erb
@@ -2,7 +2,7 @@ This is a collection of links for monitoring Integrations features.
 
 ### Grafana dashboards
 
-- [Ecosystem:Integrations group dashboard][grafana-dashboard], which contains:
+- [Manage:Integrations group dashboard][grafana-dashboard], which contains:
     - Links to various Kibana logs, filtered to our feature categories
     - Our [error budget](#error-budget) spend attribution
 - [Worker queues](https://dashboards.gitlab.net/d/sidekiq-queue-detail/sidekiq-queue-detail?orgId=1&var-PROMETHEUS_DS=Global&var-environment=gprd&var-stage=main&var-queue=jira_connect:jira_connect_sync_branch) where you can switch queues with the `queue` dropdown
