--- a/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/index.html.md.erb
@@ -29,15 +29,15 @@ For more urgent items, feel free to use the Slack Channel (internal): [#g_ecosys
 
 ## Backend Group Members
 
-<%= direct_team(manager_role: 'Engineering Manager, Ecosystem:Integrations', role_regexp: /Backend/) %>
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Integrations', role_regexp: /Backend/) %>
 
 ## Frontend Group Members
 
-<%= direct_team(manager_role: 'Engineering Manager, Ecosystem:Integrations', role_regexp: /Frontend/) %>
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Integrations', role_regexp: /Frontend/) %>
 
 ## Stable Counterparts
 
-<%= stable_counterparts(role_regexp: /(?!Integrations Engineer)(Integrations)/, direct_manager_role: 'Engineering Manager, Ecosystem:Integrations') %>
+<%= stable_counterparts(role_regexp: /(?!Integrations Engineer)(Integrations)/, direct_manager_role: 'Engineering Manager, Manage:Integrations') %>
 
 ## OKRs
 
