--- a/source/direction/dev/template.html.md.erb
+++ b/source/direction/dev/template.html.md.erb
@@ -170,9 +170,9 @@ Within each stage, the listed items below are in **order of priority**. The top 
 
 * Manage: [Workspaces to replace instance-level functionality](https://gitlab.com/groups/gitlab-org/-/epics/4257)
 * Manage: [Combine Value Stream Analytics with DORA Metrics](https://gitlab.com/groups/gitlab-org/-/epics/7790)
+* Manage: [Slack Integration](https://gitlab.com/groups/gitlab-org/-/epics/7536)
 * Plan: [Groups and Projects Simplification](https://gitlab.com/groups/gitlab-org/-/epics/2885)
 * Create: [Remote Development](https://gitlab.com/groups/gitlab-org/-/epics/7948)
-* Ecosystem: [Slack Integration](https://gitlab.com/groups/gitlab-org/-/epics/7536)
 
 ## Who is the Dev section targeting?
 We identify the [personas](/handbook/product/personas/#user-personas) the Dev section features are built for. In order to be transparent about personas we support today and personas we aim to support in the future we use the following categorization of personas listed in priority order.
