--- a/source/direction/manage/importers/templates/_overview.erb
+++ b/source/direction/manage/importers/templates/_overview.erb
@@ -10,5 +10,4 @@ At this time, GitLab is targeting the following high-level areas for import: Git
 
 The Manage:Import group is focused on GitLab Migration, which is migration of groups and projects from one GitLab instance to another, as well as on importers for other software development tools like GitHub or Bitbucket. 
 
-[Jira Integration](/direction/ecosystem/integrations/#improve-jira-integration-support) is owned by the Ecosystem:Integrations group and the [Jenkins Importer](https://about.gitlab.com/direction/verify/jenkins_importer/) is owned by the Verify:Pipeline Authoring group.
-
+[Jira Integration](/direction/ecosystem/integrations/#improve-jira-integration-support) is owned by the Manage:Integrations group and the [Jenkins Importer](https://about.gitlab.com/direction/verify/jenkins_importer/) is owned by the Verify:Pipeline Authoring group.
