--- a/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
@@ -39,8 +39,8 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
   * [Create Frontend](/handbook/engineering/frontend/create/)
   * [Gitaly](/handbook/engineering/development/dev/gitaly/)
 1. [Ecosystem](/handbook/product/categories/#ecosystem-stage)
-  * [Ecosystem: Foundations](/handbook/engineering/development/dev/ecosystem/foundations/)
-  * [Ecosystem: Integrations](/handbook/engineering/development/dev/ecosystem/integrations/)
+  * [Manage: Foundations](/handbook/engineering/development/dev/ecosystem/foundations/)
+  * [Manage: Integrations](/handbook/engineering/development/dev/ecosystem/integrations/)
 
 ## Who we are
 
