Add Matt as DRI for partnership page

--- a/sites/handbook/source/handbook/engineering/development/sec/delineate-sec.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/delineate-sec.html.md.erb
@@ -18,7 +18,7 @@ In the spirit of establishing a [DRI](/handbook/people-group/directly-responsibl
 
 | Page/Function | PM | Primary Group | Example |
 | ---      | ---      | ---      | ---      |
-| [Secure Partner Onboarding Docs](https://docs.gitlab.com/ee/development/integrations/secure_partner_integration.html) | <%= link_to_team_member('stkerr') %> | [Sec by their categories](/handbook/product/categories/#sec-section) |  |
+| [Secure Partner Onboarding Docs](https://docs.gitlab.com/ee/development/integrations/secure_partner_integration.html) | <%= link_to_team_member('matt_wilson') %> | [Sec by their categories](/handbook/product/categories/#sec-section) |  |
 | [Security Configuration](https://docs.gitlab.com/ee/user/application_security/configuration/) | [Sec by their categories](/handbook/product/categories/#sec-section) |  |  |
 | Vulnerability ingestion and DB storage | <%= link_to_team_member('matt_wilson') %> | [Govern:Threat Insights](/handbook/product/categories/#threat-insights-group) |  |
 | Dependency ingestion and DB storage | <%= link_to_team_member('matt_wilson') %> | [Govern:Threat Insights](/handbook/product/categories/#threat-insights-group) |  |
