--- a/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
@@ -50,7 +50,7 @@ The Cloud Seed private beta was made available to trusted testers in May 2022, a
 
 Most Git-based development workflows make use of temporary feature branches. In larger teams and organizations, it is required that feature branches are made available for review and testing.
 
-With Cloud Seed, a Cloud Run deployment pipeline can be generated in less than two minutes that deploys all feature branches to Cloud Run. Given Cloud Run’s free tier, this is a cost-effective method to deploy and manage preview environments.
+With Cloud Seed, a Cloud Run deployment pipeline can be generated in less than two minutes that deploys all feature branches to Cloud Run. Given Cloud Run’s free tier, this can be a cost-effective method to deploy and manage preview environments.
 
 ## Relational databases with Cloud SQL
 
