--- a/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
@@ -5,7 +5,7 @@ author: Sri Rang
 author_gitlab: sri19
 categories: open source
 tags: partners, open source, cloud native
-description: Learn how the GitLab-Google Cloud partnership came about and how it
+description: Learn how Cloud Seed came about and how it
   will help speed app modernization.
 image_title: /images/blogimages/daytime-clouds.jpg
 twitter_text: GitLab and Google Cloud partner to accelerate cloud adoption and
