Add Chris Micek to the Categories page

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -285,6 +285,7 @@
 [Michael Oliver]: /company/team/#moliver28
 [Jennifer Mundy]: /company/team/#j.mundy
 [Philip Joyce]: /company/team/#philipjoyce
+[Chris Micek]: /company/team/#chrismicek
 
 [Aleksandr Lyubenkov]: /company/team/#alyubenkov
 [Anastasia McDonald]: /company/team/#a_mcdonald
