--- a/sites/handbook/source/handbook/engineering/development/sec/secure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/secure/index.html.md.erb
@@ -368,7 +368,7 @@ MR Type labels help us report what we're working on to industry analysts in a wa
 
 - [Secure team board]
 - [#s_secure] in Slack
-- [Secure and Govern Glossary of Terms](/handbook/engineering/development/sec/secure/glossary-of-terms/)
+- [Secure and Govern Glossary of Terms](https://docs.gitlab.com/ee/user/application_security/terminology/)
 
 [Secure team board]: https://gitlab.com/groups/gitlab-org/-/boards/588843?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=devops%3A%3Asecure
 [Secure team retrospectives]: https://gitlab.com/gl-retrospectives/secure/-/issues?scope=all&utf8=%E2%9C%93&state=all
