Refresh TeamOps handbook pages with LevelUp links, illustrations, and logo

--- a/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
@@ -14,9 +14,11 @@ twitter_creator: "@gitlab"
 - TOC
 {:toc}
 
-{::options parse_block_html="true" /}
+![GitLab TeamOps teamwork illustration](/handbook/teamops/images/teamops-illustration_teamwork_purple.png)
+{: .shadow.medium.center}
 
-<%= partial("handbook/teamops/_teamops_overview.erb") %>
+This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](h/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
+
 
 # Teams exist to deliver results
 
@@ -141,6 +143,7 @@ In a [stable counterparts model](/blog/2018/10/16/an-ode-to-stable-counterparts/
 **Here's an example**: [Technical Support stable counterparts](/handbook/support/support-stable-counterparts.html)
 
 Support team members are [assigned a permanent contact](/handbook/support/support-stable-counterparts.html) for a GitLab team member within another function in the company. The ability to build long-term relationships is the foundational benefit of having stable counterparts. Repeated interactions help us understand personal workflows and communication styles, so we know how to most effectively execute decisions with our counterparts.
+
 
 ---
 
