--- a/sites/handbook/source/handbook/teamops/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/index.html.md.erb
@@ -59,8 +59,7 @@ If your organization is missing some of these building blocks, consider this an 
 
 ## TeamOps Certification
 
-In Q3-FY23, GitLab will release a 🎓 TeamOps Certification course 🎓, free and open to the public. To be amongst the first to earn the certification, sign up below and we will email you when it's available.
+To become a TeamOps practitioner, enroll and complete the 🎓 [TeamOps Practitioner Certification course on LevelUp](https://levelup.gitlab.com/learn/course/teamops) 🎓! It's free and open to the public. To be amongst the first to earn the certification, sign up below and we will email you when it's available.
 
-<iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/6wMz/NG1" width="100%"></iframe>
-
-<script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
+![GitLab TeamOps teamwork illustration](/handbook/teamops/images/teamops-illustration_teamwork_blue.jpg)
+{: .shadow.medium.center}
