Adds recommendation for a small standing desk

--- a/sites/uncategorized/source/company/culture/all-remote/workspace/index.html.md.erb
+++ b/sites/uncategorized/source/company/culture/all-remote/workspace/index.html.md.erb
@@ -207,7 +207,7 @@ Generally, a larger desk is preferred, as it reduces crowding. A clean, uncrowde
 
 An adjustable standing desk is a great, ergonomic option. You can find standing desks at a variety of price points, heights, adjustability levels, and more. An adjustable desk allows you to easily move your desk higher in order to stand while working, and then adjust it back down to sit for a time. This is a good article on [The Best Standing Desks](https://thewirecutter.com/reviews/best-standing-desk/){:target="_blank"} in higher price ranges.
 
-GitLab team members have been satisfied with the value and quality of standing desks from [Autonomous](https://www.autonomous.ai/){:target="_blank"}, [IKEA](https://www.ikea.com/us/en/p/skarsta-trotten-desk-sit-stand-white-s49435416/) and [Fully](https://www.fully.com/standing-desks.html){:target="_blank"}. 
+GitLab team members have been satisfied with the value and quality of standing desks from [Autonomous](https://www.autonomous.ai/){:target="_blank"}, [IKEA](https://www.ikea.com/us/en/p/skarsta-trotten-desk-sit-stand-white-s49435416/), [Fully](https://www.fully.com/standing-desks.html){:target="_blank"} and [WorkTrainer for small spaces](https://www.worktrainer.de/Kleiner-Wand-Sitz-Steh-Tisch-Walldesk-elektrisch). 
 
 Research is ongoing as to the [ideal ratio of sitting to standing](https://uwaterloo.ca/kinesiology/how-long-should-you-stand-rather-sit-your-work-station){:target="_blank"} during a workday. 
 
