Adding my name as author

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
@@ -1,5 +1,8 @@
 ---
 title: The many routes to a tech career
+author: Heather Simpson
+author_gitlab: heather
+author_twitter: heatherswall
 categories: culture
 tags: careers, inside GitLab
 description: GitLab team members of different ages and backgrounds share their
