Update to include Security Program Management role

--- a/sites/handbook/source/handbook/engineering/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/security/index.html.md.erb
@@ -316,6 +316,19 @@ It’s important to note that the three tenets do not operate independently of e
 
 ### Other groups and individuals
 
+#### Security Program Management
+
+Security Program Management is responsible for complete overview and driving security initiatives across Product, Engineering, and Business Enablement. This includes the tracking, monitoring, and influencing priority of significant security objectives, goals, and plans/roadmaps from all security sub-departments.  [Security Program Manager Job Family](https://about.gitlab.com/job-families/engineering/security-program-manager/)
+
+##### Security Program areas of focus
+
+- Drive Accountability & Visibility for Program Objectives & Goals
+- Drive, Gather, & Examine Program Needs & Opportunities through Intra & Inter Organizational Collaboration
+- Provide Insights & Suggestions Impacting Program Strategy & Roadmap
+- Assist in Gathering & Prioritizing Program Risks, Requirements, & Alignment to Influence Remediation
+- Drive & Define Acceptance Criteria, Value Proposition, Milestones to Visualize and Communicate Program Effectiveness
+- Develop Repeatable, Scalable, Efficient, Effective, Processes & Proceedures
+
 #### Security Architecture
 
 Security Architecture plans, designs, tests, implements, and maintains the security strategy and solutions across the entire GitLab ecosystem.
@@ -335,7 +348,6 @@ Please be aware that the Security Department can only be paged internally. If yo
 
 * For general Q&A, GitLab Security is available in the `#security` channel in GitLab Slack.
 * For [low severity](/handbook/engineering/security/security-operations/sirt/engaging-security-on-call.html#low-severity-issues), non-urgent issues, [SIRT](/handbook/engineering/security/security-operations/sirt) can be reached by mentioning `@sirt-members` in Slack or by [opening an issue](https://gitlab.com/gitlab-com/gl-security/security-operations/sirt/operations/-/issues/new?issue%5Bmilestone_id%5D=). Please be advised the SLA for Slack mentions is 6 hours on business days.
-
 
 ### Sub-groups and projects
 
