--- a/sites/handbook/source/handbook/engineering/quality/contributor-success/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/contributor-success/index.html.md.erb
@@ -24,9 +24,10 @@ description: "Contributor Success Team"
 ## Common Links
 
 | **GitLab Team Handle** | [`@gitlab-org/quality/contributor-success`](https://gitlab.com/gitlab-org/quality/contributor-success) |
-| **Slack Channel** | [`#g_contributor_success`](https://gitlab.slack.com/archives/C02R0NE6P6C), [`#i_user_engagement_contributor_growth`](https://gitlab.slack.com/archives/C0223D98HHC) (standup with the Community Relations team), [`#mrarr-wins`](https://gitlab.slack.com/archives/C01NTMN6U0P) (to announce new MRARR wins) |
-| **Team Boards** | [Backlog board](https://gitlab.com/groups/gitlab-com/-/boards/4295302), [Kanban board](https://gitlab.com/groups/gitlab-com/-/boards/4295341), [Technical board](https://gitlab.com/groups/gitlab-org/-/boards/4296693) |
-| **Issue Tracker** | [`gitlab-com/quality/contributor-success`](https://gitlab.com/gitlab-com/quality/contributor-success/-/issues) |
+| **Slack Channel** | [`#g_contributor_success`](https://gitlab.slack.com/archives/C02R0NE6P6C)
+| **Slack Channels from initiatives that we help drive**| [`#i_user_engagement_contributor_growth`](https://gitlab.slack.com/archives/C0223D98HHC), [`#leading_organizations`](https://gitlab.slack.com/archives/C03KC7N184D)  |
+| **Team Boards** | [`gitlab-org/-/boards/4296693`](https://gitlab.com/groups/gitlab-org/-/boards/4296693) |
+| **Issue Tracker** | [`gitlab-org/quality/contributor-success/team`](https://gitlab.com/gitlab-org/quality/contributor-success/team/-/issues) |
 
 - - -
 
@@ -36,23 +37,22 @@ This team directly follows the strategy outlined in our [open source growth stra
 
 ## Mission
 
-The goal of the team is to increase the technical improvements and efficiency of our contribution process to sustain
-our ambition of [1000+ contributors with merged MRs per month to GitLab](/company/strategy/#2-build-on-our-open-core-strength).
+The goal of the team is to increase the technical improvements and efficiency of our contribution process to sustain our
+ambition of [1000+ contributors with merged MRs per month to GitLab](/company/strategy/#2-build-on-our-open-core-strength).
 
 ### FY23 Direction
 
-In FY23 we will be focused on growing the number of unique new monthly
-contributors, reducing [Open Community MR Age (OCMA)](#open-community-mr-age-ocma) and increasing [MRARR](#mrarr).
-This will increase development velocity without requiring additional engineering resources.
+In FY23 we will be focused on growing the number of unique new monthly contributors, reducing [Open Community MR Age
+(OCMA)](#open-community-mr-age-ocma) and increasing [MRARR](#mrarr). This will increase development velocity without
+requiring additional engineering resources.
 
-Parallel to this we'll increase [observability of community contributed value](#community-contributed-value-observability)
-through improving the business intelligence around it. This will allow us to create some
-predictability through [foreshadowing](#community-metrics-foreshadowing). These efforts are cross-functional and
-require working together with Marketing and Product Development.
-
-This accounts for 70 - 80% of the workload. The remaining 20 - 30% is ad-hoc
-work. The ad-hoc work is eclectic and ranges from supporting customers on
-contributions, supporting various open source initiatives and supporting the
+Parallel to this we'll increase 
+[observability of community contributed value](#community-contributed-value-observability) through improving the 
+business intelligence around it. This will allow us to create some predictability through 
+[foreshadowing](#community-metrics-foreshadowing). These efforts are cross-functional and require working together 
+with Marketing and Product Development.
+This accounts for 70 - 80% of the workload. The remaining 20 - 30% is ad-hoc work. The ad-hoc work is eclectic and
+ranges from supporting customers on contributions, supporting various open source initiatives and supporting the
 [Engineering Productivity team](/handbook/engineering/quality/engineering-productivity/).
 
 #### Unique New Monthly Contributors
@@ -80,7 +80,19 @@ contributions, supporting various open source initiatives and supporting the
 #### Open Community MR Age (OCMA)
 
 1. Minimize reliance on human factors that contribute to a large standard deviation
-1. Identify & drive tooling improvements to decrease OCMA, and collaborate with the [Engineering Productivity team](/handbook/engineering/quality/engineering-productivity/) through shared tooling for [automated triaging](/handbook/engineering/quality/engineering-productivity/#automated-triage-policies)
+1. Identify & drive tooling improvements to decrease OCMA, and collaborate with the [Engineering Productivity team](/handbook/engineering/quality/engineering-productivity/) 
+through shared tooling for [automated triaging](/handbook/engineering/quality/engineering-productivity/#automated-triage-policies)
+
+#### Leading Organizations
+
+The GitLab [Leading Organizations program](/handbook/marketing/community-relations/leading-organizations/) is a
+cross-functional initiative that is led by the [Contributor Success team](/handbook/engineering/quality/contributor-success/) 
+and [Community Relations team](/handbook/marketing/community-relations/). 
+
+The Leading Organization program supports GitLab's [mission](/company/mission/#mission) by recognizing and incentivizing
+organizations who are among our most active contributors. A company or individual
+[qualifies](/handbook/marketing/community-relations/leading-organizations/#qualification) for unique benefits by
+reaching 20 merged merge requests or more over a trailing three full calendar month basis.
 
 ## Team Responsibilities
 
@@ -101,11 +113,6 @@ contributions, supporting various open source initiatives and supporting the
 
 ### File an issue
 
-There are 2 GitLab groups where the contributor success team is working with, so it can be confusing to understand what 
-to put where. We should strive to be as transparent as possible and default to solutions and discussions that benefit 
-the wider community. This is why, if you are in doubt, *we ask you to default to projects in the
-[gitlab-org group](https://gitlab.com/gitlab-org)*.
-
 #### gitlab-org/gitlab
 
 All issues that relate to the Open Source project GitLab and that can serve to enhance the contributor flow and are public by nature should be created here by default. We aim to not have any distinction between contributors or GitLab team-members for which we expect by default that everyone should be able to contribute to. 
@@ -113,26 +120,22 @@ All issues that relate to the Open Source project GitLab and that can serve to e
 * Location: [gitlab-org/gitlab](https://gitlab.com/gitlab-org/gitlab)
 * Required label: `Contributor Success`
 
-#### gitlab-com/quality/contributor-success
+#### gitlab-org/quality/contributor-success/team
 
 All issues that relate to the inner working of the company GitLab, including specific internal team workings, onboardings-issues or issues relating to customers that should be separated from the Open Source project GitLab can be placed here.
 
-* Location: [gitlab-com/quality/contributor-success](https://gitlab.com/gitlab-com/quality/contributor-success)
+* Location: [gitlab-org/quality/contributor-success/team](https://gitlab.com/gitlab-org/quality/contributor-success/team/)
 * Required label: `Contributor Success`
 
 ## Project Management
 
-* Our [team project](https://gitlab.com/gitlab-com/quality/contributor-success) is our single source of truth for all tasks & backlog.
-* Epics that contain cross-functional work across multiple departments can be created at the `gitlab-com` [level](https://gitlab.com/groups/gitlab-com/-/epics?label_name[]=Contributor+Success).
-
-This team has the following immediate work items planned.
-
-* [Contribution Efficiency Improvements](https://gitlab.com/groups/gitlab-com/-/epics/1619)
-* [Increasing MRARR through internal partnerships](https://gitlab.com/groups/gitlab-com/-/epics/1225)
+* Our [team project](https://gitlab.com/gitlab-org/quality/contributor-success/team) is our single source of truth for all tasks & backlog.
+* Epics that contain cross-functional work across multiple departments can be created at the `gitlab-org` [level](https://gitlab.com/groups/gitlab-org/-/epics?label_name[]=Contributor+Success).
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and
+previous quarter OKRs, it updates automatically as the quarter progresses.
 
 ### Current quarter
 
@@ -148,7 +151,7 @@ We have the following Performance Indicators
 
 #### [Unique Wider Community Contributors per Month](/handbook/engineering/quality/performance-indicators/#unique-wider-community-contributors-per-month)
 
-- Target: increase to be greater than 200 per month by FY23Q4
+- Target: increase to be greater than 150 per month by FY23Q4
 - Activities:
   - Partnership with Community Relations and Technical Marketing team.
   - Hold community office hours
@@ -206,7 +209,7 @@ We have the following Performance Indicators
 
 ### Community merge request workflow automations
 
-Community merge requests are MRs opened by a person that's not a member of the [`gitlab-org`](https://gitlab.com/-/ide/project/gitlab-org) nor [`gitlab-com`](https://gitlab.com/-/ide/project/gitlab-com) groups.
+Community merge requests are MRs opened by a person that's not present on https://about.gitlab.com/company/team/ (excluding any bot and service account users).
 
 #### Triage reports
 
@@ -230,11 +233,14 @@ See [Community-related reactive workflow automation](/handbook/engineering/quali
   - In that case, the `coach will finish` label will be added to the MR and the coach will either directly push new commits to the MR, or re-create a new MR with the original changes. 
   - Contributors can mention the coaches in their MRs by typing `@gitlab-org/coaches`.
 
-The list of current merge request coaches can be found in the [team page](/company/team/) by selecting `Merge Request Coach` in the department filter.
+The list of current merge request coaches can be found in the [team page](/company/team/) by selecting `Merge Request
+Coach` in the department filter.
 
-There is also the [`#mr-coaching`](https://gitlab.slack.com/archives/C2T9APP9C) channel in GitLab Slack if GitLab team members have any questions related to community contributions.
+There is also the [`#mr-coaching`](https://gitlab.slack.com/archives/C2T9APP9C) channel in GitLab Slack if GitLab team
+members have any questions related to community contributions.
 
-More information on merge request coaches (including how to become a merge request coach) can be found in the [MR coach lifecycle page](/handbook/marketing/community-relations/code-contributor-program/resources/merge-request-coach-lifecycle.html).
+More information on merge request coaches (including how to become a merge request coach) can be found in the 
+[MR coach lifecycle page](/handbook/marketing/community-relations/code-contributor-program/resources/merge-request-coach-lifecycle.html).
 
 ### Creating educational materials
 
@@ -243,9 +249,11 @@ More information on merge request coaches (including how to become a merge reque
 
 ### DCO and CLA Guidance
 
-All external contributions to GitLab are subject to the [GitLab DCO or CLA](/community/contribute/dco-cla/), depending on where the contribution is made and on whose behalf.
+All external contributions to GitLab are subject to the [GitLab DCO or CLA](/community/contribute/dco-cla/), depending
+on where the contribution is made and on whose behalf.
 
-Instructions for corporate contributors to enter into an overarching Corporate CLA covering all contributions made on their behalf are set out on the [DCO-CLA page](/community/contribute/dco-cla/#need-a-corporate-cla-covering-all-contributors-on-behalf-of-your-organization). 
+Instructions for corporate contributors to enter into an overarching Corporate CLA covering all contributions made on
+their behalf are set out on the [DCO-CLA page](/community/contribute/dco-cla/#need-a-corporate-cla-covering-all-contributors-on-behalf-of-your-organization). 
 
 ## Recognizing contributors 
 
@@ -253,29 +261,14 @@ We work with the Community Relations team, to [recognize contributors](/handbook
 
 A nomination process is also available to [nominate a contributor](/handbook/marketing/community-relations/code-contributor-program/community-appreciation/)
 
-## Contributor Efficiency Working group
+## Contributor Growth stand-up
 
-There's a working group with members from Quality and Community Relations that
-aims to streamline and improve contributor efficiency. It implements key
-business iterations that results in substantial and sustained increases to
-community contributors & contributions.
+The purpose of this stand-up is to collaborate cross-functionally between various teams and GitLab team members on
+initiatives for how to reach our goal of 1000 contributors per month. This is a subset of the User Engagement top
+initiative: (https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8 )[https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8]
 
-- Handbook page - <https://about.gitlab.com/company/team/structure/working-groups/contribution-efficiency/>
 - Agenda - <https://docs.google.com/document/d/1AOgqaslnq-WI1ICSZ1NzSnALf1Va4D5qAD191icAoSI/edit#>
 
 ## Code Contributor User Journey
 
 The code contributor user journey is documented in the handbook - [User Journey](./user-journey.html)
-
-## Leading Organizations
-
-The GitLab [Leading Organizations program](/handbook/marketing/community-relations/leading-organizations/) is a
-cross-functional initiative that is led by the [Contributor Success
-team](/handbook/engineering/quality/contributor-success/) and [Community Relations
-team](/handbook/marketing/community-relations/). 
-
-The Leading Organization program supports GitLab's [mission](/company/mission/#mission) by recognizing and incentivizing
-organizations who are among our most active contributors. A company or individual
-[qualifies](/handbook/marketing/community-relations/leading-organizations/#qualification) for unique benefits by
-reaching 20 merged merge requests or more over a trailing three full calendar month basis.
-
