--- a/source/layouts/release.haml
+++ b/source/layouts/release.haml
@@ -116,7 +116,7 @@
                       Organization wide security, compliance, and planning
                   %p
                     Try all GitLab features - 
-                    %a{:href => "https://about.gitlab.com/free-trial", title: "GitLab Free Trial"} free for 30 days
+                    %a{:href => "https://about.gitlab.com/free-trial/", title: "GitLab Free Trial"} free for 30 days
 
           / cover image
           %section#cover-img.release-post-section
