Update Source Code team

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -149,6 +149,9 @@
 [Matthew Macfarlane]: /company/team/#mmacfarlane
 [Łukasz Korbasiewicz]: /company/team/#lkorbasiewicz
 [Michelle Torres]: /company/team/#michelletorres
+[Jerry Seto]: /company/team/#j.seto
+[Patrick Cyiza]: /company/team/#jpcyiza
+[Gavin Hinfey]: /company/team/#ghinfey
 
 <%# PMM %>
 [Cindy Blake]: /company/team/#cblake2000
