--- a/sites/handbook/source/handbook/engineering/development/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/index.html.md.erb
@@ -141,11 +141,18 @@ Company-wide guidelines on the Talent Assessment can be found [here](https://abo
 
 #### Who Are We Calibrating?
 
-We will be reviewing outliers for Performance/Growth and anyone identified as Key Talent for calibration this cycle. Formal calibration will take place at the Senior Manager, Director, and VP levels. The thought process around who qualifies as an "outlier" for Performance and Growth [is outlined here](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+We will be reviewing outliers for Performance/Growth Potential and anyone identified as Key Talent for calibration this cycle. Formal calibration will take place at the Senior Manager, Director, and VP levels. The thought process around who qualifies as an "outlier" for Performance and Growth Potential [is outlined here](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 
 Calibration and assesment are two different steps in the process. The assessment phase is the process of assessing each team member to determine their Performance and Growth, whereas the calibration phase (occurring after initial assessments are made) is when management calibrates across the stage/org/level/etc. to discuss and align on assessments. Every team member should be assessed and have supporting points to justify those assessments - but to make calibration sessions more focsued and scalable, we focus on [outliers](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 
-For Development specifically, we will calibrate anyone in [Boxes, 1, 2, 3, 7, 8, 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). It's important to note that while these will be our focus areas for calibration sessions, managers should feel free to raise any team member's assessment up for discussions if they have any questions or concerns. Calibrating outliers is not a limitation, but rather a structural adjustment to ensure this process is scalable and focused. 
+For Development specifically, we will calibrate:
+
+1. Anyone in [Boxes 1 or 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+1. Anyone assessed as `Exceeding` for Performance
+1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility)
+1. Anyone identified as Key Talent
+
+It's important to note that while these will be our focus areas for calibration sessions, managers should feel free to raise any team member's assessment up for discussions if they have any questions or concerns. Calibrating outliers is not a limitation, but rather a structural adjustment to ensure this process is scalable and focused. 
 
 _Note: If individual teams want to calibrate every individual, they have the ability to do this/organize/structure separately, but the due dates remain in place across the department to ensure we have enough time to review and calibrate at the various levels in the company._
 
@@ -157,17 +164,20 @@ As the Talent Assessment impacts compensation, and Acting/Interim periods are no
 
 #### Pre-Calibration Prep Work
 
-In addition to the [calibration session pre work](https://about.gitlab.com/handbook/people-group/talent-assessment/#calibration-session-guidelines) on the Talent Assessment page, we ask that you review the following guidelines:
+In addition to the [calibration session pre work](https://about.gitlab.com/handbook/people-group/talent-assessment/#calibration-session-guidelines) on the Talent Assessment page, we ask that you complete the following:
 
-1. Performance and Growth assessments need to be completed and added to the session agenda doc at least 3 business days before the live calibration session. 
-Each individual should have at least 3 supporting points for the assessment under each pillar (Performance and Growth) added to the agenda doc to help support the “why” behind the assessment. 
+1. Directors should conduct sub-department level calibration sessions ahead of the department-wide Development calibration sessions. In addition to calibrating on initial assessments, Directors are responsible for ensuring their respective teams assessments fall within the [expected distribution](https://about.gitlab.com/handbook/people-group/talent-assessment/#expected-distribution-performancegrowth-potential-company-wide) ahead of the department-wide calibration session for efficiency.
+
+1. Performance and Growth Potential notes need to be added to the [session agenda doc](https://docs.google.com/document/d/1zrlZSfdNXpSZ09uvDM71KxH42RWBJxa6U1QTCTw05iI/edit#) for each team member at least 3 business days before the synchronous calibration session. 
+
+1. Managers should include 2-3 supporting points for each team member for the assessment under each section in the [agenda doc notes](https://docs.google.com/document/d/1zrlZSfdNXpSZ09uvDM71KxH42RWBJxa6U1QTCTw05iI/edit#) to help support the “why” behind the assessment. _Note: The overviews in the agenda document for calibration are meant to provide enough of an overview so peers have an understanding of the "why", while simultaneously not overwhelming with information and decreasing efficiency of the session. Please limit to 2-3 supporting points per team member._
 
 1. Key Talent assessment need to be completed and added to the session agenda doc at least 3 business days before the live calibration session. 
-If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughtly ~10% of the entire population. In Development, we will be assessing Key Talent from the Senior Manager level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent), meaning that while *everyone in the organization is eligible to be identified as Key Talent*, Senior Managers+ will be assessing and making these initial nominations. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization. 
 
-1. Every session attendee should review the Performance/Growth assessments and Key Talent overviews for outliers asynchronously ahead of the session to be prepared for live discussion/calibration. 
+  - If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughtly ~10% of the entire population. In Development, we will be assessing Key Talent from the Senior Manager level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent), meaning that while *everyone in the organization is eligible to be identified as Key Talent*, Senior Managers+ will be assessing and making these initial nominations. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization. 
 
-**Important**: Be sure to reference our [Resources](https://about.gitlab.com/handbook/people-group/talent-assessment/#resources) for different templates and material to help with the assessment and calibration processes. In particular, we ask that all managers leverage the [Talent Assessment Calibration Spreadsheet template provided](https://about.gitlab.com/handbook/people-group/talent-assessment/#resources) to ensure a consistent format for Performance/Growth assessment calibration and finalizing assessments so we have a format that is compatible with uploading directly to BambooHR to minimize error. Note that this sheet also includes a couple of columns for Key Talent assessment and nominations. Given that not all levels of management assess Key Talent, this will not apply for all people managers. If Key Talent is not assessed at your level, feel free to simply remove these columns.
+1. Every session attendee should review the Performance/Growth Potential assessments and Key Talent overviews for outliers asynchronously ahead of the session to be prepared for live discussion/calibration. 
+
 
 #### Calibration Session Structure
 
@@ -188,12 +198,13 @@ We will calibrate by level within the Development department as a whole to ensur
 
 ### Timeline 
 
-Below are level-specific calibration due dates for the Development Department. 
+The company-wide Talent Assessment timeline can be found [here](https://about.gitlab.com/handbook/people-group/talent-assessment/#timeline) and is SSOT. Below are level-specific calibration due dates embedded within the overall timeline for the Development Department. 
 
-- 2021-11-09: Engineering Manager calibration at the team level with their leadership team (Senior Managers and/or Directors) complete (_Note: This is not part of the formal process and is optional, but it is recommended to ensure that Senior Managers+ are prepared for future calibration sessions_) 
-- 2021-11-16: Senior Manager level calibration finalized (sessions 1-7 above)
-- 2021-11-19: Director level calibration finalized (session 8 above)
-- 2021-11-29: VP level calibration finalized (session 9 above)
+- 2022-11-04: Sub-department level calibrations are complete
+- 2022-11-07 through 2022-11-18: Development department calibration sessions with Senior Manager+ people manager attendees 
+- 2022-11-28: Development department calibration sessions with Director+ people manager attendees
+- 2022-11-29: Development department calibration sessions with VP, Development + PBP
+
 
 ## How We Work
 
