Adding links to dashboard and presentation for Quality Signup work

--- a/sites/handbook/source/handbook/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
@@ -34,6 +34,7 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Trial Feature Adoption](https://app.periscopedata.com/app/gitlab:safe-dashboard/919403/Trial-Feature-Adoption-Dashboard) |  |  | Y |
 | [Feature Retention](https://app.periscopedata.com/app/gitlab/1003214/Feature-Retention) |  |  | N |
 | [Usage PQL Analysis](https://app.periscopedata.com/app/gitlab:safe-dashboard/926643/Growth:Conversion-Usage-PQL-Analysis) |  |  | Y |
+| [User Attributes Relationship to Paid Conversion](https://app.periscopedata.com/app/gitlab:safe-dashboard/1052091/User-Attributes-Relationship-to-Paid-Conversion) | A broad analysis of user attributes identifiable upon Gitlab.com registration and their relationship to paid conversion. | FY23 Q3 | Y |
 
 
 ### Analysis & Insights
@@ -47,3 +48,4 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Relationship between Sec Section Featuers & Ultimate Customer's Purchase Decisions](https://gitlab.com/gitlab-data/product-analytics/-/issues/624#note_1041184439) | Disection of post purchase survey data to identify how important Sec features were in motivating Ultimate plan purchases. | FY23 Q3 | 
 | [Free vs. Paid. vs OSS/EDU Subscriptions: Engagement Comparison](https://gitlab.com/gitlab-data/product-analytics/-/issues/549#note_1019828866) | Comparison of similar metrics (SpO, user-stage engagement, Service Ping Opt-In rate, version adoption rate, etc) based on subscription type (Paid, Free, OSS/EDU) | FY23 Q3 | 
 | [Verify Usage Patterns for Legitimate users & Malicious Users](https://gitlab.com/gitlab-data/product-analytics/-/issues/656#note_1092057211) | Study of initial concurrent pipeline & job usage among free accounts to determine benchmarks between legitimate and malicious users | FY23 Q3 | 
+| [Quality SaaS Signup Metric 2022](https://docs.google.com/presentation/d/1xHBrnvwdMxQGqmX0TtcQz5tUYsAeU6CAMnpcDlhHUpc/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to narrow down to a subset of the Gitlab.com user population with a higher likelihood of converting to paid. | FY23 Q3 | 
