--- a/sites/uncategorized/source/services/customer-success-services/index.html.haml
+++ b/sites/uncategorized/source/services/customer-success-services/index.html.haml
@@ -33,7 +33,7 @@ extra_css:
 
         %h2 Service Delivery
         %p
-          Services will be delivered via Technical Account Manager (TAM) or digitally.
+          Services will be delivered via a Customer Success Manager (CSM) or digitally.
 
         %h2 References
         %ul
@@ -42,10 +42,10 @@ extra_css:
           %li
             %a{href: 'https://about.gitlab.com/handbook/customer-success/product-usage-data/#use-cases'} Customer Success Vision Page: Overview of GitLab's customer success strategy and approach
           %li
-            %a{href: 'https://about.gitlab.com/handbook/customer-success/csm/'} Technical Account Manager (TAM) Handbook
+            %a{href: 'https://about.gitlab.com/handbook/customer-success/csm/'} Customer Success Management (CSM) Handbook
           %li
             %a{href: 'https://about.gitlab.com/handbook/customer-success/csm/digital-journey/'} Digital Journey Programs
           %li
-            %a{href: 'https://about.gitlab.com/handbook/customer-success/csm/services/#tam-alignment'} TAM Assignment Process
+            %a{href: 'https://about.gitlab.com/handbook/customer-success/csm/services/#tam-alignment'} CSM Assignment Process
           %li
             %a{href: 'https://about.gitlab.com/handbook/legal/privacy/services-usage-data/#optional-data'} Operational Data Overview
