Update Fulfillment categories

--- a/source/direction/fulfillment/template.html.md.erb
+++ b/source/direction/fulfillment/template.html.md.erb
@@ -1,9 +1,15 @@
 ---
-layout: markdown_page
-title: Product Direction - Fulfillment
-description: "The Fulfillment team at GitLab focuses on creating and supporting the enablement of our customers to purchase, upgrade, downgrade, and renew licenses and subscriptions."
+layout: secure_and_protect_direction
+title: "Product Section Direction - Fulfillment"
+description: "The Fulfillment section at GitLab focuses on supporting our customers to purchase, upgrade, downgrade, and renew paid subscriptions."
 canonical_path: "/direction/fulfillment/"
 ---
+
+{:.no_toc}
+
+- TOC
+{:toc}
+
  
 ## On this page
 {:.no_toc}
@@ -141,6 +147,10 @@ At the moment, Fulfillment is not investing in the following items:
 7. Investments to improve marketplace offerrings 
 
 We would like to do more in each of these areas, and will reassess efforts as we wrap up existing projects and/or grow our team size. 
+
+## Categories
+
+<%= partial("direction/categories-content", :locals => { :stageKey => "fulfillment" }) %>
 
 ## Group Responsibilities
  
