Updates MR process for Dedicated

--- a/sites/handbook/source/handbook/engineering/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -204,7 +204,7 @@ When a red build in the default branch is detected, the first course of action i
 
 #### Merge request reviewers
 
-Assign all developers of Dedicated team to all of the MRs that are due for review. While it is OK for only two people to get the MR to the merged state (author + 1 reviewer), assigning everybody gives more exposure to the work in progress and gives a chance for more parties to provide feedback, leading to better quality overall.
+Assign all developers of Dedicated team to all of the MRs that are due for review. While it is OK for only two people to get the MR to the merged state (author + 1 reviewer), assigning everybody gives more exposure to the work in progress and gives a chance for more parties to provide feedback, leading to better quality overall. If the MR sits more than 1 day without receiving meaningful comments for review, MR author is encouraged to assign a particular reviewer to the MR with the aim to speed up the review process.
 
 #### Resolving threads on a merge-request
 
