Add tools / software list to Incubation Playbook

--- a/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
@@ -71,3 +71,23 @@ Incubation Engineers are often required to create prototypes or demo application
 - Code for prototypes and demo projects should be hosted in the Incubation Engineering specific `gitlab-incubation-engineering-demos`. This is preferred because projects in a subgroup will inherit configurations from the parent group ([group access tokens](https://docs.gitlab.com/ee/user/group/settings/group_access_tokens.html) or [group CI variables](https://docs.gitlab.com/ee/ci/variables/#add-a-cicd-variable-to-a-group) for example), which can result in unintended behavior when an project hasn't accounted for the inherited configurations appropriately.
 - Prototypes and demo projects should follow GitLab's [Secure Coding Guidelines](https://docs.gitlab.com/ee/development/secure_coding_guidelines.html).
 - Use of [Personal Access Tokens is discouraged](/handbook/security/#personal-access-tokens), Project Access Tokens are often sufficient.
+
+### Tools Incubation Engineers Use
+
+#### Video Recording and Editing
+
+1. Zoom
+1. OBS
+1. Final Cut Pro
+1. iMovie
+1. Kdenlive
+1. Loom
+1. Descript
+
+#### Code Editors / IDEs
+
+1. Jetbrains IDEs
+1. Visual Studio Code
+1. Sublime Text
+1. Vim
+1. GitLab Web IDE
