Remove and update current references to kwiebers in the handbook

--- a/sites/handbook/source/handbook/engineering/quality/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/index.html.md.erb
@@ -266,9 +266,7 @@ The purpose of the board is to:
 The work effort on Engineering Division and Departments' KPIs/RPIs is currently a shared capacity of the following:
 
 - [VP of Quality](https://gitlab.com/meks)
-- [Backend Engineering Manager, Engineering Productivity](https://gitlab.com/kwiebers)
-- [Backend Engineer, Engineering Productivity](https://gitlab.com/markglenfletcher)
-- [Development Senior Operations Analyst](https://gitlab.com/lmai1).
+- [Development Senior Operations Analyst](https://gitlab.com/lmai1)
 - [Infrastructure Staff Data Analyst](https://gitlab.com/davis_townsend)
 
 This group also maintains the [Engineering Metrics](/handbook/engineering/metrics/) page.
@@ -283,9 +281,9 @@ The ownership of the work columns are as follows:
 * Customer Support Department: [Director of Quality](https://gitlab.com/meks)
 * Development Department: [Development Senior Operations Analyst](https://gitlab.com/lmai1)
 * Infrastructure Department: [Infrastructure Staff Data Analyst](https://gitlab.com/davis_townsend)
-* Quality Department: [Backend Engineering Manager, Engineering Productivity](https://gitlab.com/kwiebers)
+* Quality Department: 
 * UX Department: [Director of Quality](https://gitlab.com/meks)
-* Security Department: [Backend Engineering Manager, Engineering Productivity](https://gitlab.com/kwiebers)
+* Security Department: 
 
 We still need to establish a triage process for open issues or generic issues.
 
@@ -416,8 +414,8 @@ If additional input is needed from the Quality team, the DRI for this is the Dir
 
 | Recurring event | Primary DRI | Backup DRI | Cadence | Format |
 | --------------- | ----------- | ---------- | ------- | ------ |
-| Quality Key Review | `@meks` | `@kwiebers` <br>`@tpazitny` | Every 8 weeks | Review meeting |
-| Group conversation | `@meks` | `@at.ramya` <br>`@tpazitny` <br>`@kwiebers` <br>`@jo_shih` <br>`@vincywilson` | Every 8 weeks | [Group Conversations](#group-conversations) |
+| Quality Key Review | `@meks` | `@nick_vh` <br>`@tpazitny` | Every 8 weeks | Review meeting |
+| Group conversation | `@meks` | `@at.ramya` <br>`@tpazitny` <br>`@nick_vh` <br>`@jo_shih` <br>`@vincywilson` | Every 8 weeks | [Group Conversations](#group-conversations) |
 | [GitLab SaaS Infrastructure Weekly](/handbook/engineering/infrastructure/#gitlab-saas-infrastructure) | Rotates between `@jo_shih` <br>`@vincywilson` | `@tpazitny` | Weekly | Incident review and corrective action tracking |
 | [Incident management](/handbook/engineering/infrastructure/incident-management/) | Rotates between `@jo_shih`, `@at.ramya`, and `@vincywilson` | All managers | Weekly | Incident monitoring, response, and management as needed to represent Quality |
 | [Self-managed environment triage](/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/#self-managed-environment-triage) | `@tpazitny` | `@vincywilson` | Every 2 weeks | Sync stand-up |
@@ -427,7 +425,7 @@ If additional input is needed from the Quality team, the DRI for this is the Dir
 | Quality Department Bi-Weekly | Department management team | `@meks` | Every 2 weeks | Review meeting |
 | Quality Department Social Call | All team members | All team members | Every 2 weeks | Meet and Greet |
 | Quality Hiring Bi-Weekly | All QEMs, Directors, and VP | `TBD` | Every 2 weeks | Review meeting |
-| Ops section stakeholder review | `@jo_shih` | `@kwiebers` <br>`@zeffmorgan` | Every 4 weeks | Review meeting |
+| Ops section stakeholder review | `@jo_shih` | `@jennli` <br>`@zeffmorgan` | Every 4 weeks | Review meeting |
 | Enablement Sync with AppSec | `@vincywilson` | `TBD` | Monthly | Review meeting |
 
 ## Quality Engineering initiatives
