--- a/sites/handbook/source/handbook/engineering/metrics/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/metrics/index.html.md.erb
@@ -286,7 +286,7 @@ The guidelines for inclusion in the `is_part_of_product` lists are:
 Follow these steps to request a new project to be tracked:
 
 1. Create a merge request to the GitLab.com or ops.gitlab.net project list from above.
-1. Assign the merge request to the [Manager of Engineering Productivity team](https://gitlab.com/kwiebers)
+1. Assign the merge request to the [Manager of Engineering Productivity team](https://gitlab.com/jennli)
 1. The Manager of the Engineering Productivity team will work with the [Engineering Analyst](https://gitlab.com/lmai1) to determine the changes to MR Rate metrics and provide validation for the projects
 1. The [VP of Development](https://gitlab.com/clefelhocz1) is the DRI to approve the list of projects. Upon approval the merge request author should ask in #data for assistance by a member of the Data Engineering team to merge.
 
