--- a/source/direction/release/environment_management/index.html.md.erb
+++ b/source/direction/release/environment_management/index.html.md.erb
@@ -53,7 +53,7 @@ Through the use of Environments in GitLab, teams can easily understand and take 
 
 | Dimension/Problem | Solution(s) |
 | ------ | ------ |
-| Many deployments | UI usability enhancements, scalability of the pages) |
+| Many deployments | [UI usability enhancements](https://gitlab.com/gitlab-org/gitlab/-/issues/369911), scalability of the pages |
 | Many environments | support for different types of environments (e.g. staging, production, ephemeral, etc), [ability to favorite an environment](https://gitlab.com/gitlab-org/gitlab/-/issues/298926), [automated environment cleanup/management](https://gitlab.com/groups/gitlab-org/-/epics/5920) |
 | Across multiple teams and roles | group-level permissions, [deployment approval](https://gitlab.com/groups/gitlab-org/-/epics/6832) |
 | Across multiple projects | [group-level environments](https://gitlab.com/groups/gitlab-org/-/epics/7558) |
