Add calendar section for Sec Section

--- a/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
@@ -80,6 +80,19 @@ issues:
 - [#sec-growth-modelops-people-leaders](https://gitlab.slack.com/archives/C033F69CQCB) - Engineering people leaders in Sec, Growth, and ModelOps.
 - [🔒sec-growth-modelops-leadership-confidential](https://gitlab.slack.com/archives/GKWF00Y3E) - Private channel for engineering people leaders in Sec, Growth, and ModelOps.
 
+## Calendars
+
+We have two stage level calendars, [Secure Stage Calendar](https://calendar.google.com/calendar/embed?src=gitlab.com_md0ao36gpvl5v1f4128erhnj6g%40group.calendar.google.com) and [Govern Stage Calendar](https://calendar.google.com/calendar/embed?src=gitlab.com_ed6207uel78de0j1849vjjnb3k%40group.calendar.google.com), where we host cross-group events such as:
+
+1. Monthly retrospective
+1. Coffee chats
+1. Staff sync
+1. Sec Frontend Chapter
+
+Each group also has a calendar for team-based discussions, such as the our weekly group syncs.
+
+We encourage utilizing our available [Google Groups](https://groups.google.com/my-groups) instead of including inviduals as attendees when possible. Along with ensuring the event is represented on individual's calendars for visibility, new team members are automatically added to events (as well as removed when someone departs from a team). 
+
 ## Staying Informed and Informing Team Members
 
 - [Sec Week In Review Google Document](https://drive.google.com/drive/search?q=%22Sec%20Section%20Week%20In%20Review%22) - is an asynchronous weekly document of notables things happening in Sec. The document is inspired by the [Engineering Week In Review](https://about.gitlab.com/handbook/engineering/#communication).
